08-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-web-svc
  namespace: workshop
  labels:
    app: workshop-web
spec:
  type: ClusterIP                   # Ingress จะ route มาที่ ClusterIP Service
  selector:
    app: workshop-web
  ports:
  - name: http
    port: 80
    targetPort: 80
